--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        google()
+        jcenter()
         mavenCentral()
+        google()
+
     }
     ext {
         version_navigation = '2.3.5'
@@ -11,7 +13,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
 }
 
 task clean(type: Delete) {
